z-index fix for header, modal and suggestions

--- a/src/common/components/Header/Header.module.scss
+++ b/src/common/components/Header/Header.module.scss
@@ -4,7 +4,7 @@
     position: fixed;
     width: 100%;
     max-width: 100%;
-    z-index: 99;
+    z-index: 999;
 
     display: flex;
     justify-content: space-between;
